# snt

./: CMakeLists.txt  CMakeSettings.json  Dockerfile  LICENSE  README.md  vcpkg.json
cmake/: BuildFlatBuffers.cmake
src/: CMakeLists.txt
src/sntc/: CMakeLists.txt  client.cpp  client.h  config.yaml  main.cpp  remote_session.cpp  remote_session.h  sntd.cpp  sntd.h  stable.h
src/sntcommon/: CMakeLists.txt  crypto_random.cpp  crypto_random.h  keyed_logger.h  messages.cpp  messages.h  nanoid.cpp  nanoid.h  sntcommon.fbs  sntrequest.fbs  sntresponse.fbs
src/sntd/: CMakeLists.txt  config.yaml  connect_session.cpp  connect_session.h  listen_session.cpp  listen_session.h  listener.cpp  listener.h  main.cpp  server.cpp  server.h  service.cpp  service.h  session.cpp  session.h  session_manager.h  stable.h
